--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: accounts
     spec:
       containers:
-      - image: us.icr.io/sn-labs-antonmoller/accounts:1
+      - image: IMAGE_NAME_HERE
         name: accounts
         resources: {}
 
